adding meta tags

--- a/pages/coleccion.html
+++ b/pages/coleccion.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=operagx">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colección</title>
+    <title>PlayList-Colección</title>
+    <meta name="description" content="PlayList, el lugar para categorizar tu colección de videojuegos. 
+    Luego de registrarte puedes empezar a agregar tus juegos en tu propia libreria virtual, sin importar 
+    el genero o la plataforma, sigue el progreso de tus juegos desde un sólo lugar">
+    <meta name="keywords" content="PlayList,videojuegos, colección de juegos, colección de videojuegos, nientendo, 
+    PlayStation, Xbox, Steam, games, videogames">
     <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
