--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=operagx">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>PlayList-Inicio</title>
+    <meta name="description" content="PlayList es el mejor lugar para categorizar tu colección de videojuegos 
+    y tu progreso en cada uno de ellos. ¡Registrate ahora!">
+    <meta name="keywords" content="PlayList,videojuegos, colección de juegos, colección de videojuegos, nientendo, 
+    PlayStation, Xbox, Steam, games, videogames">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
