--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=operagx">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
+    <title>PlayList-Contacto</title>
+    <meta name="description" content="PlayList es el mejor lugar para categorizar tu colección de videojuegos,
+    sin importar el genero o la plataforma en la que jueges podras seguir el progreso de todos tus juegos 
+    desde un sólo lugar. Si tienes alguna duda, escribenos.">
+    <meta name="keywords" content="PlayList,videojuegos, colección de juegos, colección de videojuegos, nientendo, 
+    PlayStation, Xbox, Steam, games, videogames">
     <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
