--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=operagx">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfil</title>
+    <title>PlayList-Perfil</title>
+    <meta name="description" content="PlayList, el lugar para categorizar tu colección de videojuegos,
+    en tu perfil puedes mostrarle a tus amigos que juegos te han gustado más y cuales no mucho,
+    muestra tambien tú lista de deseos, a todos nos gutan los regalos">
+    <meta name="keywords" content="PlayList,videojuegos, colección de juegos, colección de videojuegos, nientendo, 
+    PlayStation, Xbox, Steam, games, videogames">
     <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
